--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="page-header">
+      <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Natalie's Blog</a></h1>
         <p> <a href="http://www.twitter.com/missnataliej"> Follow me on Twitter </a> </p>
     </div>
