--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,19 +1,33 @@
 {% load staticfiles %}
 <html>
   <head>
+
       <title> natalie's blog </title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static "css/blog.css" %}">
     <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <div class="page-header">
-      {% if user.is_authenticated %}
-        <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-      {% endif %}
-        <h1><a href="/">Natalie's Blog</a></h1>
-        <p> <a href="http://www.twitter.com/missnataliej"> Follow me on Twitter </a> </p>
+       {% if user.is_authenticated %}
+       <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+       <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+       <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>)</small></p>
+       {% else %}
+       <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+       {% endif %}
+       <h1><a href="{% url 'blog.views.post_list' %}">Natalie's Programming Test Blog</a></h1>
+         <p><a href="https://twitter.com/missnataliej"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.nataliejhansen.wordpress.com"><i class="fa fa-briefcase"></i></a>
+            <a href="https://www.github.com/nataliejhansen"><i class="fa fa-github"></i></a>
+            <a href="https://www.intrusionsofbeauty.wordpress.com"><i class="fa fa-wordpress"></i></a>
+            <a href="https://www.instagram.com/missnataliej"><i class="fa fa-instagram"></i></a>  
+            <a href="https://plus.google.com/u/0/111404427090860362718/posts"><i class="fa fa-google-plus-square"></i></a>
+            <a href="https://www.linkedin.com/in/nataliejohansen"><i class="fa fa-linkedin"></i></a>
+          </p>
     </div>
     <div class="content container">
         <div class="row">
